syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixGrpc";

package br.com.zup;

service PixService {
  rpc cadastra (CadastraPixRequest) returns (CadastraPixResponse) {}
}

enum TipoDaChave {
  DESCONHECIDO = 0;
  ALEATORIA    = 1;
  CPF          = 2;
  CELULAR      = 3;
  EMAIL        = 4;
}

enum TipoDaConta {
  INVALIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastraPixRequest {
  string clienteId        = 1;
  TipoDaChave tipoDaChave = 2;
  string chave            = 3;
  TipoDaConta tipoDaConta = 4;
}

message CadastraPixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

service DeletaPixService{
  rpc deleta(DeletaPixRequest) returns (DeletaPixResponse);
}

message DeletaPixRequest {
  int64 pixId     = 1;
}

message DeletaPixResponse {
  string pixId     = 1;
  string clienteId = 2;
}